--- a/ptm.html
+++ b/ptm.html
@@ -17,10 +17,9 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-    <div id="main">
-
-        <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-        <header>
+    <!-- BODY HEADER____________________________________________________________________________________________________________ -->
+    <div>
+        <header id="main">
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -32,14 +31,16 @@ animation: AnimationName 12s ease infinite;">
 
         <div id="title">
             <h2 id="titleText">Project</h2>
-        </div><br/>
+        </div><br />
 
         <div id="learningOutcome">
             <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
-            <p style="text-align: center;">Ability to deliver complete media products for the client that meets their needs.</p>
+            <p style="text-align: center;">Ability to deliver complete media products for the client that meets their
+                needs.
+            </p>
         </div>
 
-        <br/>
+        <br />
 
         <section id="content">
             <article id="artistic_exploration">
@@ -52,7 +53,8 @@ animation: AnimationName 12s ease infinite;">
                     height="400px"></embed>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
                 </div>
             </article>
 
@@ -70,10 +72,11 @@ animation: AnimationName 12s ease infinite;">
                         href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat
                         AR filter</a>
                 </div>
+
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <!-- <img src="" class="feedbackThumbnail"></img> -->
-                    <p style="font-style: italic;">"No feedback provided yet."</p>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
                 </div>
             </article>
 
@@ -82,10 +85,11 @@ animation: AnimationName 12s ease infinite;">
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>
+
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <!-- <img src="" class="feedbackThumbnail"></img> -->
-                    <p style="font-style: italic;">"No feedback provided yet."</p>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
                 </div>
             </article>
 
@@ -99,13 +103,12 @@ animation: AnimationName 12s ease infinite;">
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
         <a href="ptm.html">Project</a>
-    </div>
 
-    <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
-    <script src="js/OrbitControls.js"></script>
-    <script src="js/main.js"></script>
-    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
+        <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
+        <script src="js/OrbitControls.js"></script>
+        <script src="js/main.js"></script>
+        <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 
 </body>
 
