--- a/ux.html
+++ b/ux.html
@@ -17,10 +17,8 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-    <div id="main">
-
-        <!-- BODY HEADER____________________________________________________________________________________________________________ -->
-        <header>
+<div>
+        <header id="main">
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -103,9 +101,11 @@ animation: AnimationName 12s ease infinite;">
                 </p>
                 <p>•Age ranges between 14–19 years old</p>
                 <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
+
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
                 </div>
             </article>
         </section>
@@ -124,49 +124,14 @@ animation: AnimationName 12s ease infinite;">
                     emotional appeal of the product.</p>
                 <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.</p>
                 <img class="contentAttachment" src="content/storyboard.png"></img>
+
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <p style="font-style: italic;">As feedback from Jo-An the storyboard looks nice and understandable.
-                        I now know that a storyboard can be a useful tool for UX design.</p>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">"As feedback from Jo-An the storyboard looks nice and understandable.
+                        I now know that a storyboard can be a useful tool for UX design.">
                 </div>
             </article>
-            <!--<article id="arduino_workshop">
-                <h2 style="font-size:40px;margin:0px;">Arduino Workshop</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="physical_prototype">
-                <h2 style="font-size:40px;margin:0px;">Physical Prototype</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-            <article id="video_prototype">
-                <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
-                    lectus consequat et.</p>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>-->
-    </div>
-    </article>
-    <!-- <article>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
-                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
-            </article> -->
     </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
