minor ui adjusment

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ background-size: 400% 400%;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
+    <div id="main">
         <header style="background: none;">
             <!-- <div class="headercontainer"> -->
             <button class="hamburger hamburger--collapse" type="button">
@@ -41,6 +42,7 @@ animation: AnimationName 12s ease infinite;">
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
                 visual.</a>
         </section>
+    </div>
 
     <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
