--- a/dev.html
+++ b/dev.html
@@ -17,8 +17,8 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-        
-        <div>
+
+    <div>
         <header id="main">
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
@@ -86,13 +86,13 @@ animation: AnimationName 12s ease infinite;">
                     art by using Three.js(a JavaScript library used to create and display animated 3D computer graphics
                     in a web browser) that you can see is now used as a dynamic background of this
                     portofolio.</p>
-                    <div class="feedback">
-                <h1>Feedback</h1>
-                <div class="plus-minus-toggle collapsed"></div>
-                <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-            </div>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
             </article>
-            
+
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">SCSS</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
@@ -103,10 +103,9 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its
-                        functionality as i find it to be a very useful tool.
-
-                        "</p>
+                    <p style="display: none;font-style: italic;">I managed to learn SCSS within a week after asking Erik
+                        of its
+                        functionality as i find it to be a very useful tool.</p>
                 </div>
             </article>
 
@@ -123,10 +122,10 @@ animation: AnimationName 12s ease infinite;">
             <div class="feedback">
                 <h1>Feedback</h1>
                 <div class="plus-minus-toggle collapsed"></div>
-                <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                <p style="display: none;font-style: italic;">No feedback provided yet.</p>
             </div>
         </section>
-        </div>
+    </div>
 
 
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
