--- a/sco.html
+++ b/sco.html
@@ -17,125 +17,130 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-<div>
-<header id="main">
-        <button class="hamburger hamburger--collapse" type="button">
-            <span class="hamburger-box">
-                <span class="hamburger-inner"></span>
-            </span>
-        </button>
-    </header>
+    <div>
+        <header id="main">
+            <button class="hamburger hamburger--collapse" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+        </header>
 
-    <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-    <div id="title">
-        <h2 id="titleText">Strategy & Concepting</h2>
-    </div>
+        <div id="title">
+            <h2 id="titleText">Strategy & Concepting</h2>
+        </div>
 
-    <br />
+        <br />
 
-    <div id="learningOutcome">
-        <h2 style="text-align: center;font-style: 40px;">Learning Outcome</h2>
-        <p style="text-align: center;">A. Ability to develop a consistent and distinctive brand strategy and visual
-            identity based on target audience analysis.</p>
-        <p style="text-align: center;">B. Ability to create media products for your client by using experiments,
-            iterations
-            and examples from the professional field.</p>
-        <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
-    </div>
+        <div id="learningOutcome">
+            <h2 style="text-align: center;font-style: 40px;">Learning Outcome</h2>
+            <p style="text-align: center;">A. Ability to develop a consistent and distinctive brand strategy and visual
+                identity based on target audience analysis.</p>
+            <p style="text-align: center;">B. Ability to create media products for your client by using experiments,
+                iterations
+                and examples from the professional field.</p>
+            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
+        </div>
 
-    <br />
+        <br />
 
-    <div class="contentDivider">
-        <h1 style="text-align:center;font-size: 40px;">Strategy</h1>
-    </div>
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-size: 40px;">Strategy</h1>
+        </div>
 
-    <section id="content">
-        <article id="TargetAudience">
-            <h1 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Target Audience</h4>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+        <section id="content">
+            <article id="TargetAudience">
+                <h1 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Target Audience</h4>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
 
-                <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
-                    how to reach them. In order to get the general idea of the target audience, 'personas' can be
-                    used to visualize the target audience. </p>
-                <!-- <p>In this assignment i have made a few personas(in
+                    <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
+                        how to reach them. In order to get the general idea of the target audience, 'personas' can be
+                        used to visualize the target audience. </p>
+                    <!-- <p>In this assignment i have made a few personas(in
                         chronological order) of one of my groupmates, my personal favorite artist, and the target
                         audience of the client.</p> -->
-                <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
+                    <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a> -->
-                <p>In this assignment i have made a persona of one of my groupmates as an exercise to visualize a
-                    target audience.</p>
-                <img class="contentAttachment" src="content/SCO_target_audience_1.jpg" alt="Missing file">
+                    <p>In this assignment i have made a persona of one of my groupmates as an exercise to visualize a
+                        target audience.</p>
+                    <img class="contentAttachment" src="content/SCO_target_audience_1.jpg" alt="Missing file">
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+            </article>
+            <article id="cjm">
+                <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Customer Journey Map</h4>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <p> The customer journey is the complete
+                        sum of experiences that customers go through when interacting with a company and or a brand. In
+                        this case, an artist.</p>
+                    <!-- <p>In this assignment i have made a few personas(in
+                        chronological order) of one of my groupmates, my personal favorite artist, and the target
+                        audience of the client.</p> -->
+                    <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
+                    <a href="" style="color: grey;">Target audience exercise 2</a>
+                    <a href="" style="color: grey;">Target audience exercise 3</a> -->
+                    <p>In this assignment i have made a customer journey map of the client.</p>
+                    <img class="contentAttachment" src="content/CJM.png" alt="Missing file">
+                    <p>The CJM above describes the states of how the customer would react to the artist, in more detail:
+                    </p>
+                    <h2 style="margin-bottom: 0;">Awareness</h2>
+                    <p style="margin:0;">In the awareness phase the customer would have been aware of the artist by
+                        social means.</p>
+                    <h2 style="margin-bottom: 0;">Interest</h2>
+                    <p style="margin:0;">The customer would have grown interest on the artist and would have decided to
+                        see
+                        more of the artist content.</p>
+                    <h2 style="margin-bottom: 0;">Consideration</h2>
+                    <p style="margin:0;">In this phase, the customer would have to consider whether or not to invest
+                        more in
+                        this artist depending each to individual taste and if the customer likes the artist enough they
+                        probably would want to see them first hand.</p>
+                    <h2 style="margin-bottom: 0;">Purchase</h2>
+                    <p style="margin:0;">The customer would have been intrigued of the artist and would decide to buy
+                        the
+                        merchandise of the artist.</p>
+                    <h2 style="margin-bottom: 0;">Advocacy</h2>
+                    <p style="margin:0;">The customer would have become a fan and shares the artist music to friends and
+                        relatives.</p>
+
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+            </article>
+        </section>
+
+        <br />
+
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
+        </div>
+        <section id="content">
+            <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Visual Association is a way to analyse on how visual images communicate a
+                    message and how images correlates to each other.</p>
+                <p>In this assigment i had to search for two different images and to visually associate them in terms of
+                    shape, content, structure, and composition.</p>
+                <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a> -->
+                <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
+
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
-        </article>
-        <article id="cjm">
-            <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Customer Journey Map</h4>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                <p> The customer journey is the complete
-                    sum of experiences that customers go through when interacting with a company and or a brand. In
-                    this case, an artist.</p>
-                <!-- <p>In this assignment i have made a few personas(in
-                        chronological order) of one of my groupmates, my personal favorite artist, and the target
-                        audience of the client.</p> -->
-                <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
-                    <a href="" style="color: grey;">Target audience exercise 2</a>
-                    <a href="" style="color: grey;">Target audience exercise 3</a> -->
-                <p>In this assignment i have made a customer journey map of the client.</p>
-                <img class="contentAttachment" src="content/CJM.png" alt="Missing file">
-                <p>The CJM above describes the states of how the customer would react to the artist, in more detail:</p>
-                <h2 style="margin-bottom: 0;">Awareness</h2>
-                <p style="margin:0;">In the awareness phase the customer would have been aware of the artist by
-                    social means.</p>
-                <h2 style="margin-bottom: 0;">Interest</h2>
-                <p style="margin:0;">The customer would have grown interest on the artist and would have decided to see
-                    more of the artist content.</p>
-                <h2 style="margin-bottom: 0;">Consideration</h2>
-                <p style="margin:0;">In this phase, the customer would have to consider whether or not to invest more in
-                    this artist depending each to individual taste and if the customer likes the artist enough they
-                    probably would want to see them first hand.</p>
-                <h2 style="margin-bottom: 0;">Purchase</h2>
-                <p style="margin:0;">The customer would have been intrigued of the artist and would decide to buy the
-                    merchandise of the artist.</p>
-                <h2 style="margin-bottom: 0;">Advocacy</h2>
-                <p style="margin:0;">The customer would have become a fan and shares the artist music to friends and
-                    relatives.</p>
-
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
-                </div>
-        </article>
-    </section>
-
-    <br />
-
-    <div class="contentDivider">
-        <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
+            </article>
+        </section>
     </div>
-    <section id="content">
-        <article>
-            <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
-            <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-            <p>Visual Association is a way to analyse on how visual images communicate a
-                message and how images correlates to each other.</p>
-            <p>In this assigment i had to search for two different images and to visually associate them in terms of
-                shape, content, structure, and composition.</p>
-            <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a> -->
-            <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
-
-            <div class="feedback">
-                <h1>Feedback</h1>
-                <div class="plus-minus-toggle collapsed"></div>
-                <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
-            </div>
-        </article>
-    </section></div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
