--- a/ptm.html
+++ b/ptm.html
@@ -54,7 +54,7 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
 
@@ -76,7 +76,7 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
 
@@ -89,7 +89,7 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
 
