--- a/ux.html
+++ b/ux.html
@@ -17,7 +17,7 @@ background-size: 400% 400%;
 -moz-animation: AnimationName 12s ease infinite;
 -o-animation: AnimationName 12s ease infinite;
 animation: AnimationName 12s ease infinite;">
-<div>
+    <div>
         <header id="main">
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
@@ -34,11 +34,12 @@ animation: AnimationName 12s ease infinite;">
 
         <div id="learningOutcome">
             <h2 style="text-align: center;font-size: 40px;">Learning Outcome</h2>
-            <p style="text-align: center;">Ability to design prototypes and user research, based on preselected methodologies
+            <p style="text-align: center;">Ability to design prototypes and user research, based on preselected
+                methodologies
                 and on user consults. </p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
-        <br/>
+        <br />
 
         <div class="contentDivider">
             <h1 style="text-align:center;font-size: 40px;">Research</h1>
@@ -105,7 +106,7 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"No feedback provided yet."</p>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
         </section>
@@ -128,11 +129,12 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">"As feedback from Jo-An the storyboard looks nice and understandable.
-                        I now know that a storyboard can be a useful tool for UX design.">
+                    <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice and
+                        understandable.
+                        I now know that a storyboard can be a useful tool for UX design.>
                 </div>
             </article>
-    </section>
+        </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
